--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href='./src/assets/logo.jpg' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adrian | JavaScript Mastery Portfolio</title>
+    <title>Dakesh|Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
